added layout management and created title

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
   },
   "plugins": ["react"],
   "rules": {
-    "react/jsx-no-target-blank": [0]
+    "react/jsx-no-target-blank": [0],
+    "react/prop-types": [0]
   }
 }
