--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,11 @@
     "plugin:react/jsx-runtime",
     "eslint-config-prettier"
   ],
-  "overrides": [],
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
