--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clear": "rimraf dist"
   },
   "dependencies": {
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.4.3",
